# constellation

./: .gitignore  README.md  pyproject.toml
configs/: capability_taxonomy.json  data_streaming.json  domain_taxonomy.json  eval_debugging.json  specialist_targets.json  train_debugger_sft.json  train_general_agent_sft.json
constellation/: __init__.py  categorization.py  cli.py  config.py  eval.py  filtering.py  formatting.py  inspection.py  io.py  labeling.py  llm_labeling.py  model_labeling.py  probes.py  reporting.py  sampling.py  schema.py  scoring.py  sft.py  specialists.py  streaming.py  subsets.py  taxonomy.py
constellation/parsers/: __init__.py  agenttrove.py  common.py  hermes.py
docs/: DATASET.md  PILOT.md
requirements/: labeling.txt  serve.txt  train.txt
schemas/: canonical.schema.json
scripts/: final_dataset_systemd.sh  format_cpu_node.sh  resume_labeling_node.sh  run_sglang_rtx6000.sh
tests/: test_categorization.py  test_inspection.py  test_llm_labeling.py  test_model_labeling.py  test_parsers.py  test_pilot_pipeline.py  test_probes.py  test_reporting.py  test_sampling.py  test_specialists.py
